[issues/47/popup/fixes2] fix youtube width on small screens

--- a/src/components/report-free/style.styl
+++ b/src/components/report-free/style.styl
@@ -288,6 +288,7 @@ a.button
     // height: 100%
     iframe
       what null
+      max-width: 100%
       // width 100% !important
       // height: auto
       // height: 100% !important
